<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.TaskDescriptionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_primary"
        app:elevation="10dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/padding_medium">

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_medium"
                android:contentDescription="@string/btn_close_content_description"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/btn_save"
                style="@style/TextViewButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_normal"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/txt_save" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_medium"
                app:cardBackgroundColor="@color/back_secondary"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layout_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/back_secondary"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/back_secondary"
                    app:boxStrokeWidth="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_task_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@null"
                        android:hint="@string/txt_task_hint"
                        android:inputType="textMultiLine"
                        android:maxLines="5"
                        android:scrollbars="vertical"
                        android:textColorHint="@color/label_tertiary" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_importance_title"
                style="@style/TextViewBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/txt_importance_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/cv_task_description"
                app:layout_constraintTop_toBottomOf="@id/cv_task_description" />

            <TextView
                android:id="@+id/tv_importance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/txt_low_importance"
                app:layout_constraintLeft_toLeftOf="@id/tv_importance_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_importance_title" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                app:dividerColor="@color/label_disable"
                app:layout_constraintTop_toBottomOf="@id/tv_importance" />

            <TextView
                android:id="@+id/tv_deadline_title"
                style="@style/TextViewBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/txt_deadline"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_importance"
                app:layout_constraintTop_toBottomOf="@id/divider_1" />

            <TextView
                android:id="@+id/tv_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/txt_choose_date"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/tv_deadline_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_deadline_title" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_enable_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tv_deadline_title"
                app:layout_constraintEnd_toEndOf="@id/cv_task_description"
                app:layout_constraintTop_toTopOf="@id/tv_deadline_title"
                app:thumbTint="@color/switch_thumb_selector"
                app:trackTint="@color/switch_track_selector" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_normal"
                app:dividerColor="@color/label_disable"
                app:layout_constraintTop_toBottomOf="@id/tv_deadline" />

            <ImageView
                android:id="@+id/ic_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:contentDescription="@string/ic_delete_content_description"
                android:src="@drawable/ic_delete_red"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_deadline_title"
                app:layout_constraintTop_toBottomOf="@id/divider_2" />

            <TextView
                android:id="@+id/tv_delete"
                style="@style/TextViewBodyStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/txt_delete"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/ic_delete"
                app:layout_constraintLeft_toRightOf="@id/ic_delete"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/ic_delete" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
