<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.TasksListFragment">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextViewTitleLargeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:text="@string/txt_personal_todo_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_done_count_title"
        style="@style/TextViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/txt_done_count"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_done_count"
        style="@style/TextViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="@id/tv_done_count_title"
        app:layout_constraintStart_toEndOf="@id/tv_done_count_title"
        app:layout_constraintTop_toTopOf="@id/tv_done_count_title"
        tools:text="10" />

    <ImageView
        android:id="@+id/btn_show_or_hide_done_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:contentDescription="@string/btn_show_or_hide_done_tasks_content_description"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_visible"
        app:layout_constraintBottom_toBottomOf="@id/tv_done_count_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_done_count_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/btn_add_task_content_description"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_show_or_hide_done_tasks"
        app:layout_constraintStart_toStartOf="@id/btn_show_or_hide_done_tasks"
        app:shapeAppearanceOverlay="@style/FloatingActionButtonCircleStyle"
        app:tint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_done_count_title"
        tools:listitem="@layout/item_task" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_done_count_title" />

    <TextView
        android:id="@+id/tv_todo_list_empty"
        style="@style/TextViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_todo_list_empty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_done_count_title" />

</androidx.constraintlayout.widget.ConstraintLayout>